tests/should_fail/two_plus_two.stahl
module main
  two-plus-two-is-five

def two-plus-two-is-five (Eq (+ 2 2) 5)
  refl _ _
